cicd/grafana/templates/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress-route-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.local.floriangubler.ch`)
      priority: 10
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-certificate
    domains:
      - main: grafana.local.floriangubler.ch
